--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="col-md-1">
       </div>
       <div class="col-md-4">
-        <img src="public/images/DSC03461.JPG" class="profile-picture">
+        <img src="public/images/DSC03461.jpg" class="profile-picture">
       </div>
       <div class="col-md-1">
       </div>
