--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 
   <!-- Icons -->
   <script src="https://use.fontawesome.com/87313a870e.js"></script>
 
-<!-- Website -->
-<title>Akosua Koranteng</title>
+  <!-- Website -->
+  <title>Akosua Koranteng</title>
 </head>
+
 <body>
   <!-- Navbar code from bootstrap -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,7 +39,7 @@
     </div>
   </nav>
 
-<!-- Intro section -->
+  <!-- Intro section -->
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-1">
@@ -50,12 +51,13 @@
       </div>
       <div class="col-md-4">
         <h1 class="intro"> Hi! I'm Akosua</h1>
-        <h3 class="sub-intro"> I'm a jack of many trades and steadily mastering all of them! Welcome to my website :)</h3>
+        <h3 class="sub-intro"> I'm a jack of many trades and steadily mastering all of them! Welcome to my website :)
+        </h3>
       </div>
     </div>
   </div>
 
-<!-- About Me section -->
+  <!-- About Me section -->
   <div id="about"> </div>
   <div class="container-fluid about">
     <div class="row">
@@ -78,7 +80,7 @@
     </div>
   </div>
 
-<!-- Project section -->
+  <!-- Project section -->
   <div id="projects"> </div>
   <div class=" container-fluid projects">
     <h1> Projects </h1>
@@ -129,7 +131,7 @@
     </div>
   </div>
 
-<!-- Skills section -->
+  <!-- Skills section -->
   <div id="skills"> </div>
   <div class="container-fluid skills">
     <h1> Skills </h1>
@@ -174,6 +176,7 @@
         </div>
       </div>
 </body>
+
 </html>
 
 <!-- References -->
